crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchor_in_branch_sequence_needs_node.txt
Q = [{. (a)} (c)]
------------------ DIAGNOSTICS -------------------
error: anchor needs an enclosing node
 --> query.ptk:1:7
  |
1 | Q = [{. (a)} (c)]
  |       ^
  |
help: wrap in a named node: `(parent . (child))`
-------------------- SYMBOLS ---------------------
